# md_read

./: .gitignore  README-zh.md  README.md  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app.rs  cli.rs  instance.rs  lib.rs  main.rs
src-tauri/src/fs/: document.rs
src-tauri/src/markdown/: highlight.rs  math.rs  mod.rs  render.rs  sanitize.rs  toc.rs
src-tauri/src/windows/: mod.rs
web/: index.html  main.js  style.css  theme.css
